--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
       with:
         go-version: 1.15
 
+    - name: Install go lang migrate
+      run: curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$platform-amd64.tar.gz | tar xvz 
+
     - name: Run migrations
       run: make migrateup
 
