--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,11 @@ jobs:
         go-version: 1.15
 
     - name: Install go lang migrate
-      run: curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$platform-amd64.tar.gz | tar xvz 
-
+      run: 
+        curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$platform-amd64.tar.gz | tar xvz 
+        sudo mv migrate.linux-amd64 /usr/bin
+        which migrate
+        
     - name: Run migrations
       run: make migrateup
 
