--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,9 @@ jobs:
     - name: Install go lang migrate
       run: 
         curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$platform-amd64.tar.gz | tar xvz 
-        sudo mv migrate.linux-amd64 /usr/bin
+        sudo mv migrate.linux-amd64 /usr/bin/migrate
         which migrate
-        
+
     - name: Run migrations
       run: make migrateup
 
