--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         go-version: 1.15
 
     - name: Install go lang migrate
-      run: 
+      run: |
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.12.2/migrate.linux-amd64.tar.gz | tar xvz 
         sudo mv migrate.linux-amd64 /usr/bin/migrate
         which migrate
