--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,9 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-      migrate:
-        image: migrate/migrate
+        ports:
+          5432:5432
+     
 
     steps:
     - uses: actions/checkout@v2
